Notes application in MVVM architecture

--- a/Leknes/Resources/en.lproj/Localizable.strings
+++ b/Leknes/Resources/en.lproj/Localizable.strings
@@ -1,1 +1,6 @@
-"main_tab_notes"="Notes";
+"notes_title"="Notes";
+"new_note"="New Note";
+"add_note"="Add Note";
+"edit_note"="Edit Note";
+"save"="Save";
+"notes_title_placeholder"="Note's title";
